Refactored some text-align and fix the copy right bug

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@ figcaption {
   font-size: 22px;
   color: seashell;
   opacity: 0.9;
+  text-align: center;
+  text-transform: capitalize;
 }
 
 .border {
@@ -72,8 +74,7 @@ figcaption {
 
 .mission-paragragh h2,
 h4 {
-  text-align: center;
-  margin-top: 20px;
+  margin-top: 18px;
 }
 
 /*Galery section*/
@@ -97,7 +98,7 @@ figure img {
 }
 
 figure figcaption {
-  text-align: center;
+  margin: 10px 0;
 }
 
 /*Location Section*/
@@ -129,10 +130,10 @@ figure figcaption {
 }
 
 .company-data {
-  text-align: center;
   margin-bottom: 40px;
 }
 
-.copyright {
+#copyright {
+  display: flex;
   margin-left: 20px;
 }
